# apitester

./: .eslintrc.js  .gitignore  Cargo.toml  LICENCE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  env.d.ts  main.rs  main.ts  style.css
src-tauri/: Cargo.toml
src-tauri/src/: commands.rs  main.rs
src-tauri/src/lib/: mod.rs  requests.rs  utils.rs  writer.rs
src/components/: Accordion.vue  Headers.vue  Request.vue  Result.vue
src/lib/: mod.rs  parse_headers.rs  requests.rs  writer.rs
src/util/: misc.ts
src/views/: RequestView.vue
testing_server/: mocks.config.js  package-lock.json  package.json
testing_server/mocks/: collections.json
testing_server/mocks/routes/: common.js
